--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -54,7 +54,6 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">myZenRx</a>
-        <a class="navbar-brand" href="#">Charts & Graphs</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -65,7 +64,7 @@
             <li class="nav-item active"><a class="nav-link" href="/medications">Explore Medications<span class="sr-only">(current)</span></a></li>
             <li class="nav-item active"><a class="nav-link" href="/list/<%= current_user.id %>">My Medications<span class="sr-only">(current)</span></a></li>
             <li class="nav-item active"><a class="nav-link" href="/entries">My Entries<span class="sr-only">(current)</span></a></li>
-            <li class="nav-item active"><a class="nav-link" href="/moods">My Statistics<span class="sr-only">(current)</span></a></li>
+            <li class="nav-item active"><a class="nav-link" href="/statistics">My Statistics<span class="sr-only">(current)</span></a></li>
             <li class="nav-item active"><a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a></li>
             <% end %>
           </ul>
