--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -120,6 +120,12 @@
             });
         });
       </script>
+
+      <script>
+        $(function () {
+          $('[data-toggle="popover"]').popover()
+        })
+      </script>
       
     </body>
     </html>
