--- a/app/views/statistics/statistics.erb
+++ b/app/views/statistics/statistics.erb
@@ -1,1 +1,63 @@
-<h1> Hello </h1>
+  <!-- # create a new line chart -->
+  <% chart = PiCharts::Line.new %>
+  
+  <head>  
+  <script src="//www.google.com/jsapi"></script>
+  <script src="/javascripts/chartkick.js"></script>
+ 
+  <link rel="stylesheet" href="/stylesheets/statistics/statistics.css">
+  <%= chart.cdn %>
+
+  </head>
+
+  <body>
+
+    <div id="ctn-phone-top" class="container">
+    <br>
+     
+
+    <h1 class="medications"> Charts & Graphs </h1>
+    <div class= "container-mood-energy">
+      <div class="mood-left">
+        <p class="mood-level-p">Mood Levels 1 - 5</p>
+        <img class='moods' src='/stylesheets/images/mood/Moods.png' alt='ZenRx Moods'/>
+      </div>
+      <div class="energy-right">
+        <p class="energy-level-p">Energy Levels 1 - 5</p>
+        <img class='batteries' src='/stylesheets/images/energy/Energies.png' alt='ZenRx Energies'/>
+      </div>
+    </div>
+
+      <% @@array_mood = [] %>
+      <% @@array_energy = [] %>
+      <% @entries.each do |entry| %>
+           <% @@array_mood << ["#{entry.date_time.strftime("%m/%d/%Y %l:%M %p")}", entry.mood.to_i  ] %>
+           <% @@array_energy << ["#{entry.date_time.strftime("%m/%d/%Y %l:%M %p")}", entry.energy_level] %>
+      <% end  %>
+
+
+
+    <div class="graphs">
+      <div class="lamp btn-group" id="graphs" role="group" aria-label="Button group with nested dropdown">
+        <button type="button" id="graphs" class="btn btn-success">Quality of Life</button>
+      </div>
+
+      <%= line_chart( [
+          {name: "Mood Levels", data: @@array_mood },
+          {name: "Energy Levels", data: @@array_energy}
+      
+      ], legend: "bottom" ) %>
+
+        <div class="cobra"></div> 
+        <div class="btn-bottom into-footer">
+          <button type="button" class="btn btn-secondary left" data-toggle="popover" title="Graphs & Charts" data-content="Coming Soon! Still under construction!"><img  src="/charts/chart.png" alt="ZenRx Chart"/><text class="button-graph"> Graphs & Charts</text></button>
+          <button type="button" class="btn btn-secondary right" data-toggle="popover" title="Printable Reports" data-content="Coming Soon! Still under construction!"><img  src="/charts/pdf.png" alt="ZenRx Chart"/><text class="button-graph"> Printable Reports</text></button>
+        </div>
+    </div>
+
+  
+    
+  </body>
+
+  <div class="push"></div> 
+</div>
