--- a/app/views/statistics/statistics.erb
+++ b/app/views/statistics/statistics.erb
@@ -53,7 +53,7 @@
         
         ], legend: "bottom" ) %>
       <% else %>
-        <h1> Not enough entries to construct chart!<h1>
+        <h1 class="chart-not-enough"> Not enough entries to construct chart!<h1>
       <% end %>
 
         <div class="cobra"></div> 
