--- a/public/stylesheets/statistics/statistics.css
+++ b/public/stylesheets/statistics/statistics.css
@@ -161,7 +161,7 @@
     display: flex;
     justify-content: center;
   }
-  h1.chart.not-enough {
+  h1.chart-not-enough {
     text-align: center;
   }
 
