--- a/public/stylesheets/statistics/statistics.css
+++ b/public/stylesheets/statistics/statistics.css
@@ -48,7 +48,7 @@
     display: flex;
     justify-content: center;
   }
-  h1.chart.not-enough {
+  h1.chart-not-enough {
     text-align: center;
   }
   
@@ -105,7 +105,7 @@
     display: flex;
     justify-content: center;
   }
-  h1.chart.not-enough {
+  h1.chart-not-enough {
     text-align: center;
   }
 }
