--- a/public/stylesheets/statistics/statistics.css
+++ b/public/stylesheets/statistics/statistics.css
@@ -16,8 +16,8 @@
   }
   p.energy-level-p {
     color: #fff;
-    background-color: #618e40;
-    border-color: #76a056;
+    background-color: #229518;
+    border-color: #25a127;
     border-style: solid;
     border-width: 0px 1px 4px 1px;
     text-transform: uppercase;
@@ -47,9 +47,22 @@
   .container-mood-energy {
     display: flex;
     justify-content: center;
+    margin: auto;
+    padding: 1rem;
   }
   h1.chart-not-enough {
     text-align: center;
+  }
+  .chart-statistics {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-grow: 1;
+    background: #f8f8ff;
+    box-shadow: 0 0 2rem rgba(41, 30, 53, 0.5);
+    margin: 1.6rem auto;
+    padding: 2.25%;
+    width: 85%;
   }
   
 }
@@ -73,8 +86,8 @@
   }
   p.energy-level-p {
     color: #fff;
-    background-color: #618e40;
-    border-color: #76a056;
+    background-color: #229518;
+    border-color: #25a127;
     border-style: solid;
     border-width: 0px 1px 4px 1px;
     text-transform: uppercase;
@@ -104,14 +117,30 @@
   .container-mood-energy {
     display: flex;
     justify-content: center;
+    margin: auto;
+    padding: 1rem;
   }
   h1.chart-not-enough {
     text-align: center;
+  }
+  .chart-statistics {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-grow: 1;
+    background: #f8f8ff;
+    box-shadow: 0 0 2rem rgba(41, 30, 53, 0.5);
+    margin: 1.6rem auto;
+    padding: 2.25%;
+    width: 85%;
   }
 }
 
 /* Phones only */
 @media (min-width:300px) and (max-width:480px) {
+  div#ctn-phone-top {
+    position: absolute;
+  }
   p.mood-level-p {
     color: #fff;
     background-color: #758feb;
@@ -120,34 +149,38 @@
     border-width: 0px 1px 4px 1px;
     text-transform: uppercase;
     line-height: 1.5;
-    padding: 6px 12px;
+    padding: 6px 4px;
     margin-bottom: 0;
     font-size: 14px;
     font-weight: bold;
     text-align: center;
     border-radius: 4px;
+    margin: auto;
+    width: 4rem;
   }
   p.energy-level-p {
     color: #fff;
-    background-color: #618e40;
-    border-color: #76a056;
+    background-color: #229518;
+    border-color: #25a127;
     border-style: solid;
     border-width: 0px 1px 4px 1px;
     text-transform: uppercase;
     line-height: 1.5;
-    padding: 6px 12px;
+    padding: 6px 4px;
     margin-bottom: 0;
     font-size: 14px;
     font-weight: bold;
     text-align: center;
+    margin: auto;
     border-radius: 4px;
+    width: 4rem;
   }
   img.batteries {
-    width: 10rem;
-    height: 2.8rem;
+    width: 7rem;
+    height: 1.8rem;
   }
   img.moods {
-    width: 10rem;
+    width: 7rem;
   }
   .energy-right {
     float: right;
@@ -160,9 +193,22 @@
   .container-mood-energy {
     display: flex;
     justify-content: center;
+    margin: auto;
+    padding: 1rem;
   }
   h1.chart-not-enough {
     text-align: center;
+  }
+  .chart-statistics {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-grow: 1;
+    background: #f8f8ff;
+    box-shadow: 0 0 2rem rgba(41, 30, 53, 0.5);
+    margin: auto;
+    padding: 2.25%;
+    width: 100%;
   }
 
 
