--- a/public/stylesheets/statistics/statistics.css
+++ b/public/stylesheets/statistics/statistics.css
@@ -64,6 +64,80 @@
     padding: 2.25%;
     width: 85%;
   }
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  background-size: 100%, 100%;
+  background-image: none;
+  }
+
+  .carousel-control-next-icon:after {
+    content: '>';
+    font-size: 2rem;
+    color: #fff;
+    letter-spacing: -0.2px;
+    border: 0;
+    outline: 0;
+    background-color: #8d94b1;
+    text-shadow: 1px 1px 0 #FFF;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    box-shadow: -5px -5px 20px #FFF, 5px 5px 20px #BABECC;
+    border-radius: 5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
+
+  .carousel-control-prev-icon:after {
+    content: '<';
+    font-size: 2rem;
+    color: #fff;
+    letter-spacing: -0.2px;
+    border: 0;
+    outline: 0;
+    background-color: #8d94b1;
+    text-shadow: 1px 1px 0 #FFF;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    box-shadow: -5px -5px 20px #FFF, 5px 5px 20px #BABECC;
+    border-radius: 5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  .carousel-indicators li {
+    background-color: #073b4c;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 1.5rem;
+    border-top: 0px;
+    border-bottom: 0px;
+  }
+  .carousel-indicators li.active {
+    background-color: #1c43b9;
+  }
+  a.carousel-control-next {
+    bottom: -85%;
+    right: 2rem;
+    opacity: 100%;
+  }
+  a.carousel-control-prev {
+    bottom: -85%;
+    left: 2rem;
+    opacity: 100%;
+  }
+  .carousel-indicators {
+    bottom: -1.5rem;
+  }
+
   
 }
 
@@ -134,6 +208,81 @@
     padding: 2.25%;
     width: 85%;
   }
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  background-size: 100%, 100%;
+  background-image: none;
+  }
+
+  .carousel-control-next-icon:after {
+    content: '>';
+    font-size: 2rem;
+    color: #fff;
+    letter-spacing: -0.2px;
+    border: 0;
+    outline: 0;
+    background-color: #8d94b1;
+    text-shadow: 1px 1px 0 #FFF;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    box-shadow: -5px -5px 20px #FFF, 5px 5px 20px #BABECC;
+    border-radius: 5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
+
+  .carousel-control-prev-icon:after {
+    content: '<';
+    font-size: 2rem;
+    color: #fff;
+    letter-spacing: -0.2px;
+    border: 0;
+    outline: 0;
+    background-color: #8d94b1;
+    text-shadow: 1px 1px 0 #FFF;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    box-shadow: -5px -5px 20px #FFF, 5px 5px 20px #BABECC;
+    border-radius: 5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  .carousel-indicators li {
+    background-color: #073b4c;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 1.5rem;
+    border-top: 0px;
+    border-bottom: 0px;
+  }
+  .carousel-indicators li.active {
+    background-color: #1c43b9;
+  }
+  a.carousel-control-next {
+    bottom: -85%;
+    right: 2rem;
+    opacity: 100%;
+  }
+  a.carousel-control-prev {
+    bottom: -85%;
+    left: 2rem;
+    opacity: 100%;
+  }
+  .carousel-indicators {
+    bottom: -1.5rem;
+  }
+
+
 }
 
 /* Phones only */
@@ -209,6 +358,85 @@
     margin: auto;
     padding: 2.25%;
     width: 100%;
+  }
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  background-size: 100%, 100%;
+  background-image: none;
+  }
+
+  .carousel-control-next-icon:after {
+    content: '>';
+    font-size: 2rem;
+    color: #fff;
+    letter-spacing: -0.2px;
+    border: 0;
+    outline: 0;
+    background-color: #8d94b1;
+    text-shadow: 1px 1px 0 #FFF;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    box-shadow: -5px -5px 20px #FFF, 5px 5px 20px #BABECC;
+    border-radius: 5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
+
+  .carousel-control-prev-icon:after {
+    content: '<';
+    font-size: 2rem;
+    color: #fff;
+    letter-spacing: -0.2px;
+    border: 0;
+    outline: 0;
+    background-color: #8d94b1;
+    text-shadow: 1px 1px 0 #FFF;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    box-shadow: -5px -5px 20px #FFF, 5px 5px 20px #BABECC;
+    border-radius: 5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  .carousel-indicators li {
+    background-color: #073b4c;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 1.5rem;
+    border-top: 0px;
+    border-bottom: 0px;
+  }
+  .carousel-indicators li.active {
+    background-color: #1c43b9;
+  }
+  a.carousel-control-next {
+    bottom: -48%;
+    right: 2rem;
+    opacity: 100%;
+  }
+  a.carousel-control-prev {
+    bottom: -48%;
+    left: 2rem;
+    opacity: 100%;
+  }
+  .carousel-indicators {
+    bottom: 2.2rem;
+  }
+  .carousel-item {
+    margin-bottom: 25%;
+  }
+  .carousel-control-prev, .carousel-control-next {
+    position: fixed;  
   }
 
 
