--- a/app/views/entries/entries.erb
+++ b/app/views/entries/entries.erb
@@ -37,8 +37,8 @@
           <div class="divTableCell"><text class="view-phone">Dose Strength</text><%= entry.dose_strength %></div>
           <div class="divTableCell"><text class="view-phone">Day Dose Interval</text><%= entry.dose_interval %></div>
           <div class="divTableCell"><text class="view-phone">Med Take Effect</text><%= entry.med_take_effect %></div>
-          <div class="divTableCell"><text class="view-phone">Med Took Effect At</text><%= entry.med_took_effect %></div>
-          <div class="divTableCell"><text class="view-phone">Med Stopped Effect At</text><%= entry.med_stopped_time %></div>
+          <div class="divTableCell"><text class="view-phone">Med Took Effect At</text><%= applicable?(entry.med_took_effect) %></div>
+          <div class="divTableCell"><text class="view-phone">Med Stopped Effect At</text><%= applicable?(entry.med_stopped_time) %></div>
           <div class="divTableCell"><text class="view-phone">Med Effect Lasted</text><%= elapsed(entry.med_lasted) %></div>
           <div class="divTableCell"><text class="view-phone">More Info</text><a id="link" href="/entries/<%= entry.id %>">Click Here</a></div>
         </div>
