--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -61,6 +61,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav mr-auto">
             <% if logged_in? %>
+            <li class="nav-item active"><a class="nav-link" href="/registrations/<%= current_user.id %>/edit">Account<span class="sr-only">(current)</span></a></li>
             <li class="nav-item active"><a class="nav-link" href="/medications">Explore Medications<span class="sr-only">(current)</span></a></li>
             <li class="nav-item active"><a class="nav-link" href="/list/<%= current_user.id %>">My Medications<span class="sr-only">(current)</span></a></li>
             <li class="nav-item active"><a class="nav-link" href="/entries">My Entries<span class="sr-only">(current)</span></a></li>
@@ -120,7 +121,7 @@
             });
         });
       </script>
-      
+  
       <script>
         $(document).ready(function(){
             $('[data-toggle="popover"]').popover({
