--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,4 +1,4 @@
-<div id="ctn-phone-top" class="container">
+<div class="container">
   <br>
 
     <%= "Must include email and password" if @user && @user.errors.any? %>
