--- a/app/views/entries/create_entry.erb
+++ b/app/views/entries/create_entry.erb
@@ -53,23 +53,26 @@
 			</div>
 
 			<div class="view-desktop">
-				<div>
-					<label class="entries-date-time" for="entry date and time">Entry Date and Time:</label>
-					<label class= "entries-med-time" for="med time">Med Time:</label>
-				</div>
-				<div class="datetimepicker-div">
-					<div class="input-group date" id="dp0">
-						<input type="text" name="entry[date_time][1]" class="form-control"/>
-						<span class="input-group-addon">
-							<span class="fas fa-calendar-alt">
-							</span>
-						</span>
-					</div>
-					<div class="input-group date" id="dp1">
-						<input type="text" name="entry[med_time][1]" class="form-control" placeholder="Med Time"/>
-						<span class="input-group-addon">
-							<span class="fas fa-clock"></span>
-						</span>
+				<div class="form-group">
+					<div class="row">
+						<div class="col-6">
+							<label for="entry_date_time" class="entries-two">Entry Date and Time:</label>
+							<div class="input-group date" id="dp0">
+								<input type="text" name="entry[date_time][1]" class="form-control w-100" placeholder="Entry Date and Time"/>
+								<span class="input-group-addon">
+									<span class="fas fa-clock"></span>
+								</span>
+							</div>
+						</div>
+						<div class="col-6">
+							<label for="entry_med_stopped_time" class="entries-three">Med Time:</label>
+							<div class="input-group date" id="dp1">
+								<input type="text" name="entry[med_time][1]" class="form-control w-100" placeholder="Med Time"/>
+								<span class="input-group-addon">
+									<span class="fas fa-clock"></span>
+								</span>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
